--- a/As3/As3.vcxproj
+++ b/As3/As3.vcxproj
@@ -196,6 +196,9 @@
     <ClInclude Include="OpenCLFunctions.h" />
     <ClInclude Include="lodepng.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(INTELOCLSDKROOT)\BuildCustomizations\IntelOpenCL.targets" />
